force-app/main/default/objects/Service_Queue_Ticket__c/Service_Queue_Ticket__c.object-meta.xml
<CustomObject>
    <label>Service Queue Ticket</label>
    <pluralLabel>Service Queue Tickets</pluralLabel>
    <nameField>
        <displayFormat>QT-{000000}</displayFormat>
        <label>Service Queue Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Turno de atención en el punto de encuentro.</description>
</CustomObject>