force-app/main/default/objects/Service_Queue_Ticket__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Text</type>
    <length>10</length>
</CustomField>