force-app/main/default/objects/Service_Queue_Ticket__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <type>Lookup</type>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Queue_Tickets</relationshipName>
    <relationshipLabel>Queue Tickets</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>