force-app/main/default/objects/Service_Queue_Ticket__c/fields/Called_By__c.field-meta.xml
<CustomField>
    <fullName>Called_By__c</fullName>
    <label>Called By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Called_Queue_Tickets</relationshipName>
    <relationshipLabel>Called Queue Tickets</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>