force-app/main/default/objects/Service_Queue_Ticket__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>