force-app/main/default/objects/Service_Queue_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Waiting</fullName><default>false</default><label>Waiting</label></value>
            <value><fullName>Called</fullName><default>false</default><label>Called</label></value>
            <value><fullName>Served</fullName><default>false</default><label>Served</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>